--- a/src/css/less/main.less
+++ b/src/css/less/main.less
@@ -20,6 +20,9 @@ body{
         padding: 0;
         font-weight: normal;
         position: relative;
+        @media only screen and (min-width: @screen-md){
+            font-size: 60px;
+        }
         &:after{
             content: "";
             display: block;
