refactored phase 2 design

--- a/src/css/less-inc/_fonts.less
+++ b/src/css/less-inc/_fonts.less
@@ -1,7 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Didact+Gothic|Open+Sans:300,400');
+// @import url('https://fonts.googleapis.com/css?family=Didact+Gothic|Open+Sans:300,400');
 
-.didact{
-    font-family: 'Didact Gothic', sans-serif;
+// .didact{
+//     font-family: 'Didact Gothic', sans-serif;
+// }
+@import url('https://fonts.googleapis.com/css?family=Carter+One|Open+Sans:300,400,700|Righteous&display=swap');
+.carterone{
+    font-family: 'Carter One', cursive;
+}
+.righteous{
+    font-family: 'Righteous', cursive;
 }
 .opensans{
     font-family: 'Open Sans', sans-serif;
