--- a/src/css/less-inc/_nav.less
+++ b/src/css/less-inc/_nav.less
@@ -3,15 +3,16 @@ nav{
   height: 60px;
   margin:0;
   padding: 0;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   position: fixed;
   z-index: 10;
-  border-bottom: solid 1px white;
   opacity: 0;
-  transition: opacity 300ms ease-in-out;
+  transform: translateY(-62px);
+  transition: all 400ms ease-in-out;
   &.sticky{
     opacity: 1;
+    transform: translateY(0px);
     transition-delay: 450ms;
   }
 
@@ -19,17 +20,12 @@ nav{
     display: block;
     float: left;
     font-size: 20px;
-    width: 40px;
-    height: 40px;
-    border: solid 2px white;
+    color: black;
+    height: 60px;
     box-sizing: border-box;
     text-align: center;
-    line-height: 38px;
-    margin-top: 10px;
+    line-height: 55px;
     margin-left: 10px;
-    &:after{
-      display: none;
-    }
   }
 
   ul{
@@ -44,6 +40,7 @@ nav{
       a{
         font-size: 20px;
         margin: 0 0 0 8px;
+        color: black;
       }
     }
   }
