--- a/src/css/less/main.less
+++ b/src/css/less/main.less
@@ -1,11 +1,19 @@
 @import '../less-inc/_fonts.less';
 @import '../less-inc/_variables.less';
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p{
+    padding: 0;
+    margin: 0;
+}
 body{ 
     margin: 0;
-    padding: 0;
-    background: url('../../../img/bg.jpg') no-repeat left center fixed; 
-    background-size: cover;
+    padding: 0 0 150px 0;
+    
     .opensans();
 
     @media only screen and (min-width: @screen-sm){
@@ -15,7 +23,7 @@ body{
     h1{
         color: white;
         font-size: 30px;
-        .didact();
+        .righteous();
         margin: 0;
         padding: 0;
         font-weight: normal;
@@ -23,14 +31,10 @@ body{
         @media only screen and (min-width: @screen-md){
             font-size: 60px;
         }
-        &:after{
-            content: "";
-            display: block;
-            width: 95%;
-            height: 1px;
-            background-color: white;
-            float: right;
-        }
+    }
+    h2{
+        .carterone();
+        font-weight: normal;
     }
     p{
         margin: 0;
@@ -38,7 +42,7 @@ body{
         color: white;
         font-size: 14px;
         text-align: right;
-        font-weight: 300;
+        font-weight: 400;
     }
     ul{
         margin: 0;
@@ -89,9 +93,46 @@ body{
             font-size: 10px;
             opacity: .6;
         }
+        z-index: 1;
     }
-    #FullPageTwo{
-        background-color: black;
+    #FullPageOne{
+        background: url('../../../img/bg.jpg') no-repeat left center fixed; 
+        background-size: cover;
+    }
+    
+    footer{
+        background-color: #2f4f4f;
+        height: 150px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        h2{
+            position: absolute;
+            bottom: 0;
+        }
+    }
+    #AboutSlide{
+        background: #2f4f4f;
+        color: white;
+        h2,
+        p{
+            text-align: center;
+        }
+        p{
+            margin: 20px 0;
+        }
+        ul{
+            float: none;
+            text-align: center;
+            overflow: hidden;
+            opacity: .5;
+            li{
+                display: inline-block;
+                float: none;
+                font-size: 30px;
+                padding: 0 8px;
+            }
+        }
     }
 }
 
